--- a/client/partials/things/index.html
+++ b/client/partials/things/index.html
@@ -5,10 +5,10 @@
 		<th>Routes</th>
 	</thead>
 	<tr ng-repeat='thing in thing_index'>
-		<td>thing</td>
+		<td>{{thing.field}}</td>
 		<td>
-			<a href='thing/show/thing._id'>Show</a>
-			<a href='thing/edit/thing._id'>Edit</a>
+			<a href='things/show/thing._id'>Show</a>
+			<a href='things/edit/thing._id'>Edit</a>
 			<a href='#' ng-click='thing_delete(thing._id)'>Delete</a>
 		</td>
 	</tr>
